Stop Running Firewall Checks for MediaRouterMojoExtensionTest

The firewall checks weren't running before, and with the upcoming COM
initialization change for TestBrowserThreadBundle, they'll suddenly
start running, changing all of the assumptions for the
MediaRouterMojoExtensionTest.

This change disables firewall checking for tests.

BUG=735725

Change-Id: I6e6760ab42cf9d5180cfa33028fb3fb973a45f1f
Reviewed-on: https://chromium-review.googlesource.com/544900
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481741}
Former-commit-id: 36088764facdace5cbf05517bfa0d1809d5553bd