chrome/browser/media/router/mojo/media_router_mojo_impl.cc
@@ -62,7 +62,8 @@ MediaRouterMojoImpl::MediaSinksQuery::~MediaSinksQuery() = default;
 
 MediaRouterMojoImpl::MediaRouterMojoImpl(
     extensions::EventPageTracker* event_page_tracker,
-    content::BrowserContext* context)
+    content::BrowserContext* context,
+    FirewallCheck check_firewall)
     : event_page_tracker_(event_page_tracker),
       instance_id_(base::GenerateGUID()),
       availability_(mojom::MediaRouter::SinkAvailability::UNAVAILABLE),
@@ -72,9 +73,11 @@ MediaRouterMojoImpl::MediaRouterMojoImpl(
   DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
   DCHECK(event_page_tracker_);
 #if defined(OS_WIN)
-  CanFirewallUseLocalPorts(
-      base::Bind(&MediaRouterMojoImpl::OnFirewallCheckComplete,
-                 weak_factory_.GetWeakPtr()));
+  if (check_firewall == FirewallCheck::RUN) {
+    CanFirewallUseLocalPorts(
+        base::Bind(&MediaRouterMojoImpl::OnFirewallCheckComplete,
+                   weak_factory_.GetWeakPtr()));
+  }
 #endif
 }
 
